--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+@media (min-width: 700px){
 *{
     font-family: 'Poppins', sans-serif;
     margin: 0;
@@ -264,4 +265,5 @@ body{
     
 
 
+}
 }
